# personal-assistant

./: README.md  address_book.pkl  address_book.py  data_handling.py  main.py  main_menu.py  note.py  notebook.pkl  prompt_tool.py  pyproject.toml  requirements.txt  setup.py
notebook/: address_book.py  adress_book.py  note.py  notebook.py  utils.py
